--- a/trueface-sdk-android/sdk/src/main/res/values/strings.xml
+++ b/trueface-sdk-android/sdk/src/main/res/values/strings.xml
@@ -1,3 +1,8 @@
 <resources>
-    <string name="app_name">Trueface SDK</string>
+    <string name="title_activity_nfcconfirmation">NFCConfirmationActivity</string>
+    <string name="dummy_button">Dummy Button</string>
+    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="title_activity_show_connect_data">ShowConnectDataActivity</string>
+    <string name="passport">Passport</string>
+    <string name="done">Done</string>
 </resources>
